Closed Bug 941356 Opened 12 years ago Closed 5 years ago

drag image not correctly created when parent has css transform

Categories

(Core :: DOM: Copy & Paste and Drag & Drop, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
88 Branch
Webcompat Priority P2
Tracking Status
firefox88 --- fixed

People

(Reporter: rinick, Assigned: emilio)

References

()

Details

(Keywords: parity-chrome, parity-edge, testcase)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20100101 Firefox/25.0 (Beta/Release) Build ID: 20131112160018 Steps to reproduce: open this page and drag the div <!DOCTYPE HTML> <html> <head> <style type="text/css"> #div2 {transform:translate(100px,100px)} </style> <script> function drag(ev) { ev.dataTransfer.setData("Text","hello"); } </script> </head> <body> <div id="div2"> <div draggable="true" ondragstart="drag(event)">drag me</div> </div> </body> </html> Actual results: there is no dragging image under cursor when text is being dragged. Expected results: there should be an image
Status: UNCONFIRMED → NEW
Component: Untriaged → Drag and Drop
Ever confirmed: true
Product: Firefox → Core
FWIW, same behavior with Google Chrome 37.0.2023.0. MSIE 10 & 11 get this properly.
URL: data:text/html;charset=utf-8,<!DOCTYP...
Keywords: testcase
Version: 25 Branch → Trunk

(In reply to (mostly gone) XtC4UaLL [:xtc4uall] from comment #1)

FWIW, same behavior with Google Chrome 37.0.2023.0.
MSIE 10 & 11 get this properly.

Chrome79 now works as expected.

Setting webcompat-prio P2 - while this isn't super critical, it breaks a lot of things in funny ways, for example the Web UI for Synology NAS devices.

Webcompat Priority: --- → P2
Attached file Test-case
Attachment #9206296 - Attachment mime type: text/plain → text/html

I'm not sure whether we should deal with ancestor scales and such. There
seemed to be a discussion about that in D77436 but dealing with
partially-3d-transformed content sounds like a massive pain. For now
this fixes the start point, which is a progression.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0234f9c34062 Fix start offset of transformed drag images. r=botond
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
QA Whiteboard: [qa-88b-p2]
See Also: → 467297
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: