dom/base/DOMIntersectionObserver.cpp
@@ -636,10 +636,7 @@ void DOMIntersectionObserver::Update(Document* aDocument,
 
       // 2.3. Let targetRect be a DOMRectReadOnly obtained by running the
       // getBoundingClientRect() algorithm on target.
-      targetRect = nsLayoutUtils::GetAllInFlowRectsUnion(
-          targetFrame,
-          nsLayoutUtils::GetContainingBlockForClientRect(targetFrame),
-          nsLayoutUtils::RECTS_ACCOUNT_FOR_TRANSFORMS);
+      targetRect = targetFrame->GetBoundingClientRect();
 
       // 2.4. Let intersectionRect be the result of running the compute the
       // intersection algorithm on target.
